--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,20 +6,14 @@ variables:
   ANDROID_SDK_TOOLS:   "4333796"
 
 before_script:
-  - apt-get --quiet update --yes
-  - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
-  - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
-  - unzip -d android-sdk-linux android-sdk.zip
-  - echo y | android-sdk-linux/tools/bin/sdkmanager "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
-  - echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools" >/dev/null
-  - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
-  - export ANDROID_HOME=$PWD/android-sdk-linux
-  - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
-  - chmod +x ./gradlew
-  # temporarily disable checking for EPIPE error and use yes to accept all licenses
-  - set +o pipefail
-  - yes | android-sdk-linux/tools/bin/sdkmanager --licenses
-  - set -o pipefail
+  - ./ci/install_adk.sh $ANDROID_COMPILE_SDK $ANDROID_BUILD_TOOLS $ANDROID_SDK_TOOLS
+  
+cache:
+  key: one-key-to-rule-them-all
+  paths:
+    - android-sdk-linux
+    - .gradle/wrapper
+    - .gradle/caches
 
 stages:
   - build
