--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   ANDROID_SDK_TOOLS:   "4333796"
 
 before_script:
+  - chmod +x ./ci/install_adk.sh
   - ./ci/install_adk.sh $ANDROID_COMPILE_SDK $ANDROID_BUILD_TOOLS $ANDROID_SDK_TOOLS
   
 cache:
