--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ variables:
 before_script:
   - chmod +x ./ci/install_adk.sh
   - ./ci/install_adk.sh $ANDROID_COMPILE_SDK $ANDROID_BUILD_TOOLS $ANDROID_SDK_TOOLS
+  - export ANDROID_HOME=$PWD/android-sdk-linux
+  - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
   
 cache:
   key: one-key-to-rule-them-all
