--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".Application"
         android:theme="@style/AppTheme">
         <activity android:name=".gallery.GalleryActivity">
             <intent-filter>
@@ -21,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".details.DetailsActivity" />
+
+        <service android:name=".ImageScannerService" />
     </application>
 
 </manifest>
