--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
         <activity android:name=".map.MapActivity" />
         <activity android:name=".camera.CameraActivity" />
+        <activity android:name=".search.SearchActivity" />
 
         <service android:name=".ImageScannerService" />
 
