--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".scanning.ScanningActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +30,8 @@
 
         <activity android:name=".details.DetailsActivity" />
         <activity android:name=".camera.CameraActivity" />
+        <activity android:name=".MainActivity" />
+
         <service android:name=".ImageScannerService" />
 
         <provider
