--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
     compileSdkVersion 27
     defaultConfig {
-        applicationId "uk.ac.shef.com4510"
+        applicationId "uk.ac.shef.oak.com4510"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
@@ -55,7 +55,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.+'
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
